subo imagen y etiqueta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Pagina web</title>
 </head>
 <body>
-    
+    <header>
+        <img src="logo.png" alt="Logo de página">
+        <nav>
+            <ol>
+                <li><a href="/Home">Home</a></li>
+                <li><a href="/product">Products</a></li>
+            </ol>
+        </nav>
+    </header>
+    <img src="img/Screenshot from 2024-11-07 09-52-09.png" alt="Imagen">
 </body>
 </html>
