--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
                 <li><a href="/product">Products</a></li>
             </ol>
         </nav>
+        <main>
+            <article>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla eveniet sapiente unde aut tenetur eos architecto, assumenda placeat ad officia quas nemo quasi distinctio harum, delectus id deserunt asperiores.</p>
+            </article>
+        </main>
+        <footer>
+            <span>copyright 2025</span>
+        </footer>
     </header>
     <img src="img/Screenshot from 2024-11-07 09-52-09.png" alt="Imagen">
 </body>
