añadiendo otro parrafo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <article>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla eveniet sapiente unde aut tenetur eos architecto, assumenda placeat ad officia quas nemo quasi distinctio harum, delectus id deserunt asperiores.</p>
             </article>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt atque vitae ut eos vero eligendi ratione facilis! Dolorum facere quis magnam nostrum, eligendi in repellat totam, porro optio mollitia doloribus.
+                </p>
+            </article>
         </main>
         <footer>
             <span>copyright 2025</span>
