Correcion estructura, eliminacion de foto y añado nueva figura

--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
 </head>
 <body>
     <header>
+        <figure>
         <img src="logo.png" alt="Logo de página">
-        <nav>
-            <ol>
-                <li><a href="/Home">Home</a></li>
-                <li><a href="/product">Products</a></li>
-            </ol>
-        </nav>
+        <figcaption> Aqui va el logo</figcaption>
+        </figure>
     </header>
-    <img src="img/Screenshot from 2024-11-07 09-52-09.png" alt="Imagen">
 </body>
 </html>
