Contenido del main

--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
 </head>
 <body>
     <header>
+        <nav>
         <figure>
         <img src="logo.png" alt="Logo de página">
         <figcaption> Aqui va el logo</figcaption>
         </figure>
+        <ul>
+            <li><a href="/home">Inicio</a></li>
+        </ul>
+    </nav>
     </header>
+    <main>
+        <h1>title 1</h1>
+        <aside>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#parr1">Title</a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda accusamus aliquam odit non quas animi ipsam fugiat commodi vel blanditiis amet quo eaque eveniet dolor omnis ut, repellendus unde! Ratione?</p>
+
+        </article>
+    </main>
 </body>
 </html>
