añadimos footer copyright

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         </aside>
         <article>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda accusamus aliquam odit non quas animi ipsam fugiat commodi vel blanditiis amet quo eaque eveniet dolor omnis ut, repellendus unde! Ratione?</p>
-
         </article>
     </main>
+    <footer>
+        <div><span>Copyright 2025: The revenge School</span></div>
+    </footer>
 </body>
 </html>
